@@ -3,6 +3,7 @@ yoshimi 1.3.x
 2016-3-23 Will
 - Implemented CLI Vector save and load.
 - Minimum CLI abbreviations capitalised.
+- Reorganised CLI vector features setting.
 
 2016-3-21 Will
 - Bugfix: All file loads incorporating scales now correctly tuned.
